--- a/service_relation/src/main/resources/application-dev.yml
+++ b/service_relation/src/main/resources/application-dev.yml
@@ -16,15 +16,15 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/db_douyin?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://114.132.160.52:3306/db_douyin?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true
     type: com.alibaba.druid.pool.DruidDataSource
-    username: root
-#    password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
+    username: ENC(5Ev24JNagGONP1Ca9+xZWg==)
+    password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
 
   redis:
-    host: 127.0.0.1
+    host: 114.132.160.52
     port: 6379
-#    password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
+    password: ENC(lQ3mg76A7j6WOm/j8zQ5dyfaDa06L4FX)
     database: 5
 
   jackson:
@@ -34,7 +34,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: localhost:8848
 
 feign:
   client:
